infra-k8s/app-demo/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-demo
  namespace: app-demo
  labels:
    app: app-demo
spec:
  replicas: 2
  selector:
    matchLabels:
      app: app-demo
  template:
    metadata:
      labels:
        app: app-demo
    spec:
      containers:
        - name: app-demo
          image: registry.gitlab.com/mtoris/app-demo:4d1568d4
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: 32Mi
              cpu: 50m
            limits:
              memory: 64Mi
              cpu: 200m
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 3
            periodSeconds: 5
      imagePullSecrets:
        - name: gitlab-registry-secret
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
