infra-k8s/app-demo/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-demo
  namespace: app-demo
  labels:
    app: app-demo
spec:
  selector:
    app: app-demo
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
