infra-k8s/app-demo/deployment-svc-ingress.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: js-game-app
  labels:
    app: js-game-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: js-game-app
  template:
    metadata:
      labels:
        app: js-game-app
    spec:
      containers:
      - name: js-game-app
        image: internaldev/jsgame:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: js-game-app
  name: js-game-app-service
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: js-game-app
  sessionAffinity: None
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: js-game-app-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    traefik.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - app.staging.maxto-platform.cloud
    secretName: js-game-tls
  rules:
  - host: app.staging.maxto-platform.cloud
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: js-game-app-service
              port:
                number: 80
