infra-k8s/app-demo/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-demo
  namespace: app-demo
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - app.maxto-platform.cloud
      secretName: app-demo-tls
  rules:
    - host: app.maxto-platform.cloud
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app-demo
                port:
                  number: 80
